# movies-agent

./: .env.template  LICENSE  README.md  alembic.ini  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
alembic/: env.py
alembic/versions/: 76a7f0edb1eb_initial_migration.py  9afee1020281_use_credit_id_as_primary_key_for_cast_.py
data/: playground.sql  queries_and_answer.json  source.txt
scripts/: populate_answers.py
src/: langsmith_test_dataset.py  load_data.py  models.py  prompts.py  react_agent.py  test_agent.py
